log
Fri 23 Sep 2022 11:31:44 AM UTC: 
 tests:  1|8
total_score: 0/70
37f4755
Fri 23 Sep 2022 11:51:30 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4c8d8eb
Fri 23 Sep 2022 12:03:00 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: expected expression before ‘TreeMap’
   76 |   TreeNode*  aux = TreeMap->root;
      |                    ^~~~~~~
Compilation failed
380ae49
Fri 23 Sep 2022 12:03:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: ‘Tree’ undeclared (first use in this function); did you mean ‘tree’?
   76 |   TreeNode*  aux = Tree->root;
      |                    ^~~~
      |                    tree
treemap.c:76:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
371cf4f
